fixed layout alignments, added larger screen view

--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,17 @@ body {
   background-color: var(--clr-pale-blue);
 }
 
+h1 {
+  font-size: 1px;
+  color: var(--clr-pale-blue);
+}
+
 p {
   font-size: 1rem;
   color: var(--clr-desaturated-blue);
 }
+
+/*background styles and grid*/
 
 .main-container {
   display: grid;
@@ -36,28 +43,36 @@ p {
   align-content: center;
 }
 
-.card-title {
-  text-align: center;
-  margin: 30px auto 30px auto;
-  font-weight: 900;
-}
-
+/* main card styles*/
 .order-summary-card {
   width: 330px;
   height: 570px;
   background-color: white;
   border-radius: 20px;
+  box-shadow: 0 20px 50px hsl(245, 75%, 52%, 0.2);
 }
+
+/*top card section*/
 
 .summary-img {
   width: 100%;
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
 }
+
+.card-title {
+  text-align: center;
+  margin: 25px auto 15px auto;
+  font-weight: 900;
+}
+
 .summary-description {
   text-align: center;
   margin: auto 30px auto 30px;
+  line-height: 1.6;
 }
+
+/*middle card section*/
 
 .plan-container {
   display: flex;
@@ -67,55 +82,128 @@ p {
   border-radius: 15px;
   height: 85px;
   width: 300px;
-  margin-left: 15px;
-  margin-top: 20px;
+  margin: 20px 20px;
   background-color: var(--clr-very-pale-blue);
 }
 
 .music-icon {
-  margin: 15px 10px 15px 15px;
   order: 1;
+  align-self: center;
+  margin-left: 20px;
 }
 
 .annual-txt {
-  margin-top: 20px;
-  margin-left: -10px;
-  margin-bottom: 20px;
   order: 2;
+  align-self: center;
+  margin-bottom: 25px;
+  margin-left: -15px;
   color: var(--clr-black);
+  font-size: 14px;
   font-weight: 900;
 }
 
 .price {
   order: 2;
+  align-self: center;
   align-self: flex-end;
-  margin-left: -110px;
-  margin-bottom: 10px;
+  margin-left: -115px;
+  margin-bottom: 22px;
+  font-size: 14px;
 }
-
 .change {
   order: 3;
+  align-self: center;
   font-weight: 900;
   margin: 25px;
+  font-size: 14px;
 }
+
+.change:hover {
+  text-decoration: none;
+  color: hsl(245, 75%, 52%, 0.7);
+}
+
+/*bottom card section*/
 
 .payment-container {
   display: flex;
   flex-direction: column;
-  margin: 30px 15px 15px 15px;
+  margin: 25px 20px 25px 20px;
 }
 
 .pay-btn {
+  letter-spacing: 0.1rem;
   font-weight: 900;
   height: 50px;
   width: 300px;
-  border-radius: 15px;
+  border-radius: 10px;
+  box-shadow: 0 20px 30px hsl(245, 75%, 52%, 0.3);
   color: var(--clr-white);
   background-color: var(--clr-bright-blue);
 }
 
+.pay-btn:hover {
+  --clr-bright-blue: hsl(245, 75%, 52%, 0.7);
+}
+
 .cancel-btn {
+  color: var(--clr-desaturated-blue);
   text-align: center;
-  margin-top: 15px;
+  text-decoration: none;
+  font-size: 14px;
+  margin-top: 25px;
   font-weight: 900;
+}
+
+.cancel-btn:hover {
+  color: var(--clr-black);
+}
+
+@media screen and (min-width: 768px) {
+  .main-container {
+    background: url(./images/pattern-background-desktop.svg);
+    background-repeat: no-repeat;
+  }
+
+  .order-summary-card {
+    width: 450px;
+    height: 700px;
+  }
+
+  .card-title {
+    margin: 40px auto 20px auto;
+  }
+
+  .summary-description {
+    margin: auto 50px auto 50px;
+  }
+
+  .plan-container {
+    width: 350px;
+    height: 105px;
+    margin: 20px 50px;
+  }
+
+  .annual-txt {
+    font-size: 16px;
+    margin-left: -55px;
+  }
+
+  .price {
+    font-size: 16px;
+    margin-left: -165px;
+    margin-bottom: 30px;
+  }
+
+  .payment-container {
+    width: 350px;
+    margin: 30px 50px auto 50px;
+  }
+  .pay-btn {
+    width: 350px;
+    margin-bottom: 5px;
+  }
+  .cancel-btn {
+    font-size: 16px;
+  }
 }
